--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -122,7 +122,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 328
         },
         "id": "dUEgFFskpqAH",
         "outputId": "ea0a7a38-c33a-417f-e3df-1ac55743a5ec"
@@ -839,7 +839,7 @@
         "id": "4rzWIVubflIn"
       },
       "id": "4rzWIVubflIn",
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -855,10 +855,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Txg-IwTdzcUu",
-        "outputId": "8ac0c376-41ff-4ef8-df2d-dc6f532b12b6"
+        "outputId": "eaa5a990-1101-4655-8ec7-5f9dd4978fae"
       },
       "id": "Txg-IwTdzcUu",
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,10 +904,10 @@
           "height": 591
         },
         "id": "i-pnJJuN2MFQ",
-        "outputId": "d002157f-a877-4901-e996-45b915442e03"
+        "outputId": "8903785d-d352-4964-99cd-4b29f7c9612e"
       },
       "id": "i-pnJJuN2MFQ",
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,10 +947,10 @@
           "height": 330
         },
         "id": "lORic_L31_Tb",
-        "outputId": "aba2d614-d4e5-4f2c-b210-8fc20415bc60"
+        "outputId": "f078fbd3-c892-48f9-9d49-5e1455a010d1"
       },
       "id": "lORic_L31_Tb",
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -979,7 +979,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-eb000f14-94fc-40e1-8231-119fe9adb765\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-41fb11cd-7844-44f9-b7a8-16dd59fb5859\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1100,7 +1100,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-eb000f14-94fc-40e1-8231-119fe9adb765')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41fb11cd-7844-44f9-b7a8-16dd59fb5859')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1152,12 +1152,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-eb000f14-94fc-40e1-8231-119fe9adb765 button.colab-df-convert');\n",
+              "        document.querySelector('#df-41fb11cd-7844-44f9-b7a8-16dd59fb5859 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-eb000f14-94fc-40e1-8231-119fe9adb765');\n",
+              "        const element = document.querySelector('#df-41fb11cd-7844-44f9-b7a8-16dd59fb5859');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1177,8 +1177,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-30c8ca29-152e-46fe-b34f-78db13f002ed\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30c8ca29-152e-46fe-b34f-78db13f002ed')\"\n",
+              "<div id=\"df-50481ef5-2a30-4889-878d-db1ce85d9d4a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50481ef5-2a30-4889-878d-db1ce85d9d4a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1297,7 +1297,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-30c8ca29-152e-46fe-b34f-78db13f002ed button');\n",
+              "        document.querySelector('#df-50481ef5-2a30-4889-878d-db1ce85d9d4a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1314,55 +1314,9 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 14
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "What proportion of values are missing? Is this concerning?"
-      ],
-      "metadata": {
-        "id": "UMA4LNAl0x9p"
-      },
-      "id": "UMA4LNAl0x9p"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "var = 'subject_injury'\n",
-        "missing_prop = df[var].isna().mean() # convert missing values to true (1), false (0) otherwise, and get proportion of missing values\n",
-        "print(f\"Proportion of missing values: {missing_prop:.2%}\") # print this proportion as percentage with 2 decimal places"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c4tnDFVQ3NEz",
-        "outputId": "b6d1bc7c-f234-45a5-cd27-b8eeed46a520"
-      },
-      "id": "c4tnDFVQ3NEz",
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Proportion of missing values: 76.19%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "This is very concerning that well over half of the entries in this data frame having missing values for whether the subject was injured or not. It leads to thoughts about whether the police maybe didn't want to disclose whether the subject suffered an injury and the severity of injuries where this information is 'Missing'."
-      ],
-      "metadata": {
-        "id": "oZfiD2oC32y2"
-      },
-      "id": "oZfiD2oC32y2"
     },
     {
       "cell_type": "code",
@@ -1376,7 +1330,7 @@
         "id": "8FxSFQJQ0fzP"
       },
       "id": "8FxSFQJQ0fzP",
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1389,10 +1343,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3K1GnKGN5Hv1",
-        "outputId": "f4b07deb-f8f1-4538-9a47-b3e5cc9be2c7"
+        "outputId": "250c9a3b-1eca-46ed-d7b9-37af8e59a5c6"
       },
       "id": "3K1GnKGN5Hv1",
-      "execution_count": 25,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1414,10 +1368,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eLr3nxYV5M2s",
-        "outputId": "a3aec919-9fec-4c64-b958-4ddd5de298d1"
+        "outputId": "197ffcf8-bd05-45b4-c140-48a15555f794"
       },
       "id": "eLr3nxYV5M2s",
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,6 +1386,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What proportion of values are missing? Is this concerning?"
+      ],
+      "metadata": {
+        "id": "UMA4LNAl0x9p"
+      },
+      "id": "UMA4LNAl0x9p"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "var = 'subject_injury'\n",
+        "missing_count = (df[var] == \"Missing\").sum()\n",
+        "\n",
+        "total_injury = df[var].notna().sum()\n",
+        "\n",
+        "# Calculate proportion\n",
+        "missing_prop = missing_count / total_injury\n",
+        "\n",
+        "print(f\"Proportion of missing values: {missing_prop:.2%}\") # print this proportion as percentage with 2 decimal places"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c4tnDFVQ3NEz",
+        "outputId": "cf900ea7-5b95-4037-9ff5-ae53cd85f3b4"
+      },
+      "id": "c4tnDFVQ3NEz",
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Proportion of missing values: 76.19%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is very concerning that well over half of the entries in this data frame having missing values for whether the subject was injured or not. It leads to thoughts about whether the police maybe didn't want to disclose whether the subject suffered an injury and the severity of injuries where this information is 'Missing'."
+      ],
+      "metadata": {
+        "id": "oZfiD2oC32y2"
+      },
+      "id": "oZfiD2oC32y2"
     },
     {
       "cell_type": "markdown",
@@ -1451,7 +1457,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 192
         },
         "id": "WeL4YPac68Nk",
         "outputId": "0ed20203-2fbc-4306-9d3c-c9b17b5c9d62"
@@ -2883,10 +2889,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dxx_Jyt-D9aL",
-        "outputId": "e0ba72fd-0143-4b12-fe02-d7029a95d770"
+        "outputId": "c035d560-3d4e-4080-d2d6-5f907b2111de"
       },
       "id": "dxx_Jyt-D9aL",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -3364,14 +3370,20 @@
         "id": "LpFaiJ9qU6SA"
       },
       "id": "LpFaiJ9qU6SA",
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 2.5 what proportion of victims are male?\n",
-        "proportion_m = (df['Sex'].str.upper() == 'M').mean()\n",
+        "male_count = (df[\"Sex\"] == \"M\").sum()\n",
+        "\n",
+        "total_gender = df[\"Sex\"].notna().sum()\n",
+        "\n",
+        "# Calculate proportion\n",
+        "proportion_m = male_count / total_gender\n",
+        "\n",
         "print(f\"Proportion of male victims: {proportion_m:.2%}\")"
       ],
       "metadata": {
@@ -3379,16 +3391,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VHLRR2mrpZgb",
-        "outputId": "cee27475-405b-4f62-afe7-21c9d8916e5a"
+        "outputId": "5e476eea-43f6-4084-f46a-026cda4cad51"
       },
       "id": "VHLRR2mrpZgb",
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Proportion of male victims: 78.73%\n"
+            "Proportion of male victims: 87.64%\n"
           ]
         }
       ]
@@ -3403,21 +3415,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xOzPSFBcQIL_",
-        "outputId": "0e910be5-be7a-4dc8-84ae-59ef834167ed"
+        "outputId": "0503d287-2cff-4527-e162-81eac8f61f99"
       },
       "id": "xOzPSFBcQIL_",
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Type\n",
-            "Unprovoked             4055\n",
-            "Provoked                516\n",
-            "Invalid                 402\n",
-            "Watercraft              280\n",
-            "Sea Disaster            156\n",
+            "Unprovoked             5153\n",
+            "Provoked                637\n",
+            "Invalid                 552\n",
+            "Watercraft              355\n",
+            "Sea Disaster            242\n",
             "Questionable             22\n",
             "Boat                      7\n",
             " Provoked                 2\n",
@@ -3451,7 +3463,7 @@
         "id": "xURbaQpBpdJD"
       },
       "id": "xURbaQpBpdJD",
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -3464,19 +3476,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SjQNTjZPRqOA",
-        "outputId": "0682e3c0-cb82-4205-878d-d730d1d6e56e"
+        "outputId": "21e8599f-d8d4-4a2c-8736-d0aacec29f6f"
       },
       "id": "SjQNTjZPRqOA",
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Type\n",
-            "Unprovoked    4055\n",
-            "Unknown        887\n",
-            "Provoked       516\n",
+            "Unprovoked    5153\n",
+            "Unknown       1202\n",
+            "Provoked       637\n",
             "Name: count, dtype: int64\n"
           ]
         }
@@ -3486,7 +3498,13 @@
       "cell_type": "code",
       "source": [
         "# what proportion is Unprovoked?\n",
-        "prop_unprovoked = (df[\"Type\"] == \"Unprovoked\").mean()\n",
+        "unprovoked_count = (df[\"Type\"] == \"Unprovoked\").sum()\n",
+        "\n",
+        "total_type = df[\"Type\"].notna().sum()\n",
+        "\n",
+        "# Calculate proportion\n",
+        "prop_unprovoked = unprovoked_count / total_type\n",
+        "\n",
         "print(f\"Proportion of unprovoked attacks: {prop_unprovoked:.2%}\")"
       ],
       "metadata": {
@@ -3494,16 +3512,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yTNylSrZpjYG",
-        "outputId": "0b2bcd3c-45b1-4f7e-c053-0a6d3ec846a8"
+        "outputId": "f6500cf3-2399-43b4-d047-e8e067f16234"
       },
       "id": "yTNylSrZpjYG",
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Proportion of unprovoked attacks: 74.29%\n"
+            "Proportion of unprovoked attacks: 73.70%\n"
           ]
         }
       ]
