--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -4677,13 +4677,13 @@
       "cell_type": "markdown",
       "source": [
         "3.1\n",
-        "It's about component of data cleaning called data tidying, and how we can make data cleaning easier and more effective. Tidy datasets have a specific, consistent structure that provide an advantage for gaining insights from analysis and modeling.\n",
+        "It's about a component of data cleaning called data tidying, and how we can make data cleaning easier and more effective. Tidy datasets have a specific, consistent structure that provide an advantage for gaining insights from analysis and modeling.\n",
         "\n",
         "3.2\n",
-        "The \"tidy data standard\" is the standard of structuring the dataset in a specific way that makes it easier and more efficient to analyse the data.\n",
+        "The \"tidy data standard\" is the standard of structuring the dataset in a specific way that makes it easier and more efficient to analyze the data.\n",
         "\n",
         "3.3\n",
-        "Every messy dataset is messy in its own way, meaning that data sets that are not tidy, are all organized in very different unique ways, which makes it difficult to analyze them in a standardized way each time you deal with data.\n",
+        "Every messy dataset is messy in its own way, meaning that data sets that are not tidy are all organized in very different unique ways, which makes it difficult to analyze them in a standardized way each time you deal with data.\n",
         "\n",
         "The second sentence means that, for a given dataset, it may be unclear or a bit confusing how the author of the dataset chose to organize observations and variables. Some variables may seem like they should be categories of one variable, and some observations may not make sense all in one column.\n",
         "\n",
