--- a/lab/lab_notebook.ipynb
+++ b/lab/lab_notebook.ipynb
@@ -1178,6 +1178,79 @@
         "2. Get your search results of interest using `requests` and extract data from them using `beautifulSoup`, using code similar to what's above.\n",
         "3. Wrangle your data into a dataframe and do some basic descriptions and plots. Try to find some interesting relationships or stories to tell about your data."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.\n",
+        "* I picked musical instruments\n",
+        "* Fields/data I would like to gather: title, price, link, type of musical instrument\n",
+        "* What kinds of EDA I would do:"
+      ],
+      "metadata": {
+        "id": "Y10ug2DNntZ7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "\n",
+        "import requests\n",
+        "\n",
+        "header = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:124.0) Gecko/20100101 Firefox/124.0'}\n",
+        "url = 'https://charlottesville.craigslist.org/search/msa?purveyor=owner#search=1~gallery~0~0' # The page we want to scrape (musical instr)\n",
+        "raw = requests.get(url,headers=header)"
+      ],
+      "metadata": {
+        "id": "tBfO-kYznakP"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from bs4 import BeautifulSoup as soup\n",
+        "bsObj = soup(raw.content,'html.parser')\n",
+        "listings = bsObj.find_all(class_=\"cl-static-search-result\")"
+      ],
+      "metadata": {
+        "id": "KtNmvzrm6UGo"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "instruments = ['honda', 'dodge']\n",
+        "\n",
+        "data = []\n",
+        "\n",
+        "for k in range( len(listings) ):\n",
+        "    title = listings[k].find('div',class_='title').get_text().lower()\n",
+        "    price = listings[k].find('div',class_='price').get_text()\n",
+        "    link = listings[k].find(href=True)['href']\n",
+        "\n",
+        "    #get type of instrument from title string\n",
+        "    words = title.split()\n",
+        "    hits = [word for word in words if word in instruments] # Find brands in the title\n",
+        "    if len(hits) == 0:\n",
+        "        instrument_type = 'missing'\n",
+        "    else:\n",
+        "        instrument_type = hits[0]\n",
+        "\n",
+        "    data.append({'Title':title,'Price':price,'Instrument Type':instrument_type,'link':link})"
+      ],
+      "metadata": {
+        "id": "kiVkS3S7-lwZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
